Changes from review